--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "dev:emulators": "cross-env FIREBASE_AUTH_EMULATOR_HOST=localhost:9099 FIREBASE_FIRESTORE_EMULATOR_HOST=localhost:8080 nodemon src/server.js",
     "test": "node check-files.js && jest --runInBand",
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
