--- a/firebase.json
+++ b/firebase.json
@@ -10,5 +10,61 @@
       "enabled": true,
       "port": 4000
     }
+  },
+  "hosting": {
+    "public": "frontend/dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
+    "headers": [
+      {
+        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|ico)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=31536000"
+          }
+        ]
+      },
+      {
+        "source": "**/*.@(js|css)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=31536000"
+          }
+        ]
+      },
+      {
+        "source": "**/*.css",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "text/css; charset=utf-8"
+          }
+        ]
+      },
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Content-Security-Policy-Report-Only",
+            "value": "default-src 'self'; script-src 'self' https://static.cloudflareinsights.com 'wasm-unsafe-eval'; connect-src 'self' https://groundctrl--groundctrl-c8860.us-central1.hosted.app https://*.googleapis.com https://*.firebaseapp.com https://*.firebase.com https://*.firebaseio.com wss://*.firebaseio.com wss://*.firebaseapp.com https://*.socket.io wss://*.socket.io https://api.missionctrl.org wss://api.missionctrl.org; font-src 'self' data: https://fonts.gstatic.com https://fonts.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://*.googleapis.com https://firebasestorage.googleapis.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests;"
+          }
+        ]
+      }
+    ]
+  },
+  "apphosting": {
+    "serviceId": "backend",
+    "source": "./backend"
   }
 }
