--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,7 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "p-queue": "^9.1.0",
+    "satellite.js": "^6.0.2",
     "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
