--- a/frontend/package.json
+++ b/frontend/package.json
@@ -96,5 +96,8 @@
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "^1.4.0",
     "vite": "^7.3.1"
+  },
+  "overrides": {
+    "camera-controls": "^2.10.1"
   }
 }
