--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -44,6 +44,26 @@
         "source": "**",
         "headers": [
           {
+            "key": "X-Frame-Options",
+            "value": "DENY"
+          },
+          {
+            "key": "Content-Security-Policy",
+            "value": "default-src 'self'; script-src 'self' https://static.cloudflareinsights.com 'wasm-unsafe-eval'; connect-src 'self' https://groundctrl--groundctrl-c8860.us-central1.hosted.app https://*.googleapis.com https://*.firebaseapp.com https://*.firebase.com https://*.firebaseio.com wss://*.firebaseio.com wss://*.firebaseapp.com https://*.socket.io wss://*.socket.io https://api.missionctrl.org wss://api.missionctrl.org; font-src 'self' data: https://fonts.gstatic.com https://fonts.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://*.googleapis.com https://firebasestorage.googleapis.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests;"
+          },
+          {
+            "key": "X-Content-Type-Options",
+            "value": "nosniff"
+          },
+          {
+            "key": "Referrer-Policy",
+            "value": "strict-origin-when-cross-origin"
+          },
+          {
+            "key": "Permissions-Policy",
+            "value": "geolocation=(), payment=(), usb=(), accelerometer=(), gyroscope=(), magnetometer=(), microphone=(), speaker=(), fullscreen=(), ambient-light-sensor=(), autoplay=(), camera=(), encrypted-media=(), display-capture=(), document-domain=(), midi=(), vr=(), xr-spatial-tracking=()"
+          },
+          {
             "key": "Content-Security-Policy-Report-Only",
             "value": "default-src 'self'; script-src 'self' https://static.cloudflareinsights.com 'wasm-unsafe-eval'; connect-src 'self' https://groundctrl--groundctrl-c8860.us-central1.hosted.app https://*.googleapis.com https://*.firebaseapp.com https://*.firebase.com https://*.firebaseio.com wss://*.firebaseio.com wss://*.firebaseapp.com https://*.socket.io wss://*.socket.io https://api.missionctrl.org wss://api.missionctrl.org; font-src 'self' data: https://fonts.gstatic.com https://fonts.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://*.googleapis.com https://firebasestorage.googleapis.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests;"
           }
