--- a/.github/workflows/frontend-e2e-tests.yml
+++ b/.github/workflows/frontend-e2e-tests.yml
@@ -69,7 +69,9 @@ jobs:
       - name: Wait for backend to be ready
         run: |
           echo "Waiting for backend API to be ready..."
-          npx wait-on --timeout 60000 http://localhost:3001/api/v1/help/categories || echo "Backend health check timed out, continuing anyway"
+          npx wait-on --timeout 120000 --interval 500 http-get://localhost:3001/api/v1/help/categories || echo "Backend health check timed out, continuing anyway"
+          echo "Backend is responding, waiting extra 5 seconds for full initialization..."
+          sleep 5
       
       - name: Install Playwright browsers
         working-directory: ./frontend
