--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,6 +85,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.0",
     "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^25.2.1",
@@ -92,7 +93,12 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.3",
     "axe-core": "^4.10.2",
+    "eslint": "^10.0.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "firebase-tools": "^13.0.0",
+    "globals": "^15.14.0",
     "postcss": "^8.5",
     "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^4.1.9",
