--- a/.github/workflows/frontend-e2e-tests.yml
+++ b/.github/workflows/frontend-e2e-tests.yml
@@ -87,16 +87,15 @@ jobs:
         working-directory: ./frontend
         run: npx playwright test --project="${{ matrix.browser }}"
         env:
-          CI: true
-          PLAYWRIGHT_BASE_URL: http://localhost:5173
-          # Minimal Firebase config for CI (prevents initialization errors)
+          CI: 'true'
+          PLAYWRIGHT_BASE_URL: 'http://localhost:5173'
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY || 'test-api-key' }}
           VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN || 'test.firebaseapp.com' }}
           VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID || 'test-project' }}
           VITE_FIREBASE_STORAGE_BUCKET: ${{ secrets.VITE_FIREBASE_STORAGE_BUCKET || 'test.appspot.com' }}
           VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID || '123456789' }}
           VITE_FIREBASE_APP_ID: ${{ secrets.VITE_FIREBASE_APP_ID || 'test-app-id' }}
-          VITE_API_BASE_URL: http://localhost:3001/api/v1
+          VITE_API_BASE_URL: 'http://localhost:3001/api/v1'
       
       - name: Stop backend server
         if: always()
