--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.1",
     "embla-carousel-react": "^8.6.0",
@@ -79,6 +80,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.182.0",
+    "topojson-client": "^3.1.0",
     "vaul": "^1.1.2",
     "zod": "^4.3.6",
     "zxcvbn": "^4.4.2"
